fixed footer-main-layout problem

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,8 +4,6 @@
     font-size: 19px;
     line-height: 1.55;
     box-sizing: border-box;
-    min-height: 100%;
-    margin-top: 60px;
 }
 
 a, a:hover, a:focus {
