--- a/src/Layout/Footer/Footer.module.css
+++ b/src/Layout/Footer/Footer.module.css
@@ -1,6 +1,7 @@
 .Footer {
-    position: relative;
-    bottom: 0;
+    position: absolute;
+    left:0;
+    bottom:0;
     width: 100%;
     height: 80px;
     background-color: #f0f0f2;
