--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -1,3 +1,11 @@
 .Layout {
+    min-height: 100%;
+    position: relative;
     text-align: center;
+    margin-top: 60px;
+    padding-bottom: 80px;
+}
+
+.Main {
+    min-height: 300px;
 }
